add delete file function

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,3 +6,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+  script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
+  script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
+  script(src='/javascripts/app.js')
