--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,1 +1,10 @@
-/** Noting **/
+#listAlert {
+    display: none;
+}
+#listAlert.show {
+    display: block;
+}
+
+.list-group-item button {
+    margin-right: 20px;
+}
